# serious-graphics-library

./: .clang-format  .gitignore  CMakeLists.txt  README.md  shell.nix
dependencies/: CMakeLists.txt  boost.cmake  spdlog.cmake  tl.cmake
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: CMakeLists.txt  implot.cmake
dependencies/stb/: CMakeLists.txt
dependencies/stb/include/stb/: image.hpp
dependencies/stb/src/: image.cpp
examples/: CMakeLists.txt
examples/include/: sl_example.hpp
examples/include/sl_example/: basis.hpp  camera.hpp
examples/shaders/: 05_textured_triangle.vert  10_ssbo.frag  10_ssbo.vert  12_cubes.frag  12_cubes.vert  13_lighting_object.frag  13_lighting_object.vert  13_lighting_source.frag  1_triangle.vert  4_colored_triangle.frag  4_colored_triangle.vert  5_textured_triangle.frag
examples/src/: 00_blank_window.cpp  01_triangle.cpp  02_rectangle.cpp  03_two_triangles.cpp  04_colored_triangle.cpp  05_textured_triangle.cpp  06_rectangle_texture_mix.cpp  07_rectangle_transform.cpp  08_imgui.cpp  09_implot.cpp  0_blank_window.cpp  10_ssbo.cpp  11_cube.cpp  12_cubes.cpp  13_lighting_color.cpp  1_triangle.cpp  2_rectangle.cpp  3_two_triangles.cpp  4_colored_triangle.cpp  5_textured_triangle.cpp  6_rectangle_texture_mix.cpp  7_rectangle_transform.cpp  8_imgui.cpp  9_implot.cpp
include/sl/: gfx.hpp  graphics.hpp
include/sl/common/: log.hpp  vendors.hpp
include/sl/ctx/: context.hpp  window.hpp
include/sl/gfx/: ctx.hpp  draw.hpp  primitives.hpp  render.hpp  shader.hpp  vtx.hpp
include/sl/gfx/common/: finalizer.hpp  log.hpp
include/sl/gfx/ctx/: context.hpp  imgui.hpp  implot.hpp  window.hpp
include/sl/gfx/detail/: get.hpp  gl_type_map.hpp  log.hpp  parameter.hpp
include/sl/gfx/draw/: draw.hpp  framebuffer.hpp
include/sl/gfx/primitives/: basis.hpp  color.hpp  size.hpp  transform.hpp  type_map.hpp  vec.hpp  world.hpp
include/sl/gfx/render/: camera.hpp  draw.hpp  projection.hpp
include/sl/gfx/shader/: program.hpp  shader.hpp
include/sl/gfx/vtx/: buffer.hpp  texture.hpp  vertex_array.hpp  vertex_array_attribute.hpp
include/sl/primitives/: color.hpp  size.hpp  vec.hpp
src/: graphics.cpp
src/common/: log.cpp
src/ctx/: context.cpp  imgui.cpp  implot.cpp  window.cpp
src/detail/: log.cpp
src/shader/: log_detail.hpp  program.cpp  shader.cpp
src/vtx/: texture.cpp  vertex_array.cpp
test/: CMakeLists.txt
